# inker

./: .gitignore  Cargo.toml  README.md  config.yaml
src/: cli.rs  config.rs  file_handler.rs  generate.rs  main.rs  webserver.rs
templates/: about.html  base.html  custom.css  index.html  index_template.html  post.html  post_template.html  projects.html  template.html
templates/bs-darkly/: about.html  base.html  index.html  model.yaml  post.html  projects.html
templates/bs-lux-doc/: base.html  index.html  nav_template.html  post.html
templates/bs-solar-doc/: base.html  custom.css  index.html  model.yaml  nav_template.html  post.html
templates/navy/: base.html  index.html  main.css  nav_template.html  post.html  projects.html
