[package]
name = "inker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.2"
tera = "1.17.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
yaml-rust = "0.4.5"
slugify = "0.1.0"
notify = "5.0.0"
chrono = "0.4"